# Image-Processor

./: CMakeLists.txt  controller.cpp  controller.h  image_processor.cpp  my_exception.cpp  my_exception.h  readme.md
file_management/: bmp_file.cpp  bmp_file.h
filters/: basic.cpp  basic.h  blur.cpp  blur.h  channel.cpp  channel.h  convolution.cpp  convolution.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  filter.h  gray_scale.cpp  gray_scale.h  hue.cpp  hue.h  intensity.cpp  intensity.h  negative.cpp  negative.h  saturation.cpp  saturation.h  sharpening.cpp  sharpening.h  sobel.cpp  sobel.h  threshold.cpp  threshold.h
image/: color.cpp  color.h  image.cpp  image.h
tests/: color_tests.cpp  file_management_tests.cpp  filter_tests.cpp  input_tests.cpp
